# memoub

./: .env.example  .gitignore  AGENTS.md  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
android/: .gitignore
android/app/: build.gradle
docs/: android-release.md  android-ux.md  release-checklist.md  stack.md  theme-system.md  todo.md  windows-release.md  windows-ux.md
scripts/: collect-release-artifacts.mjs
src/: App.tsx  TrayPreviewApp.tsx  fonts.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppMenu.tsx  AppShellScreens.tsx  ConflictSheet.tsx  LocaleSelector.tsx  SyncFooter.tsx  UpdateSheet.tsx
src/hooks/: useLocale.ts  useMemoubApp.ts  useTheme.ts  useUiScale.ts
src/lib/: app-platform.ts  app-version.ts  auth-service.ts  config.ts  desktop-auth-storage.ts  desktop-auth.ts  desktop-preview.ts  desktop-runtime.ts  desktop-shell.ts  desktop.ts  external-url.ts  i18n.ts  indexed-db.ts  note-repository.ts  supabase.ts  sync-engine.ts  theme.ts  types.ts
src/lib/updates/: check-current-app-updates.ts  get-update-url.ts  github-releases.ts  types.ts  update-checker.ts  version.ts
src/test/: sync-engine.test.ts  update-checker.test.ts  update-runtime.test.ts
src/themes/: graphite.ts  index.ts  matrix.ts  paper.ts  sea.ts  types.ts
supabase/: schema.sql
(+3 files in other folders)
