[package]
name = "memoub"
version = "1.0.3"
description = "memoub Windows desktop app built with Tauri"
authors = ["FishellVvv"]
license = ""
repository = "https://github.com/fishellVvv/memoub"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "memoub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
